# s2dm

./: .bumpversion.toml  .gitignore  .gitlint  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  index.html  index.searchindex.html  index.searchpage.html  index.xml  noxfile.py  pyproject.toml  searchindex.en.js  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docgen.yml  release.yml
.migration/: .bumpversion.toml  setup-repository.sh
.migration/docs/: modeling-guide.md  setup-guide.md
.migration/workflows/: migrate.yml
1-approach-overview/: index.html  index.xml
1-approach-overview/1.1-objects-and-properties/: index.html  index.xml
1-approach-overview/1.2-concept-uris/: index.html  index.xml
1-approach-overview/1.3-multi-hierarchies/: index.html  index.xml
1-approach-overview/1.4-variant-ids/: index.html  index.xml
1-approach-overview/1.5-spec-registry/: index.html  index.xml
1-approach-overview/1.6-capabilities/: index.html  index.xml
2-data-modeling-guideline/: index.html  index.xml
2-data-modeling-guideline/2.1.-pre-defined-elements/: index.html  index.xml
2-data-modeling-guideline/2.2-how-to/: index.html  index.xml
3-tools/: index.html  index.xml
3-tools/3.1-cli/: index.html  index.xml
3-tools/3.2-automation/: index.html  index.xml
4-examples/: index.html  index.xml
4-examples/version-bump-cli/: index.html
5-faqs/: index.html  index.xml
actions/s2dm-compose/: README.md  action.yml
actions/s2dm-publish/: README.md  action.yml
categories/: index.html
docs/: APPROACH_PRIMER.md  CONTRIBUTING.md  MODELING_GUIDE.md
docs-gen/: .stylelintignore  .stylelintrc.json  README.md  config.toml  package-lock.json  package.json
docs-gen/content/: _index.md
docs-gen/layouts/: home.html  index.html  single.html
docs-gen/test/: package.json
docs/examples/: README.md
examples/graphql-to-skos/: README.md  sample.graphql  shapes.shacl  skos-mapping-diagram.md
examples/multiple-domains/: OtherDomains.graphql
examples/seat-to-vspec/: README.md  result.vspec
examples/spec-history-registry/: .gitignore  README.md  sample.graphql
examples/trailer/: README.md
others/: index.html  index.xml
others/approach_primer/: index.html
others/basic_principle/: index.html
search/: index.html
src/concept/: models.py  services.py
src/idgen/: idgen.py  models.py  spec.py
src/s2dm/: __init__.py  cli.py  iris.py  logger.py
tags/: index.html
tests/: conftest.py  test_avro.py  test_avro_idl.py  test_check_constraint.py  test_cli_validation.py  test_e2e_avro.py  test_e2e_avro_idl.py  test_e2e_cli.py  test_e2e_jsonschema.py  test_e2e_protobuf.py  test_enum_validation.py  test_get_field_case.py  test_get_field_case_logic.py  test_gql_inspector.py  test_idgen.py  test_jsonschema.py  test_naming_convention.py  test_naming_utils.py  test_protobuf.py  test_s2dm.py  test_schema_loader.py  test_schema_processing.py  test_skos_exporter.py  test_skos_search.py  test_units_sync.py  test_utils.py
(+272 files in other folders)
